--- a/.drone.yml
+++ b/.drone.yml
@@ -3,8 +3,9 @@ type: docker
 name: default
 
 steps:
-  name: my-pipeline
-  image: golang:1.8
-  commands: go build
+  - name: my-pipeline
+    image: golang:1.8
+    commands:
+    - go build
 
 
